Add opens for testing